objects/CB_SLS_eCas_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>eCas History</relationshipLabel>
        <relationshipName>eCas_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Call_Duration_in_minutes__c</fullName>
        <label>Call Duration in Minutes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dials__c</fullName>
        <label>Dials</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Gen_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Gen Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>eCas_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>eCas History</relationshipLabel>
        <relationshipName>eCas_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>eCas History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Call_Duration_in_minutes__c</columns>
        <columns>Lead_Gen_Rep__c</columns>
        <columns>Account__c</columns>
        <columns>Lead__c</columns>
        <columns>Dials__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>eCas-{0000}</displayFormat>
        <label>eCas History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eCas History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>